--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
                 <td>GTG</td>
             </tr>
         </tbody>
+        <br><br>
+    <a href="root.html" class="btn btn-dark">Click to go to form</a>
+
     </table>
     </center>
     <br>
