--- a/root.html
+++ b/root.html
@@ -31,7 +31,11 @@
                     <!-- <label for="phoneNo"> Phone number</label> -->
                     <input class="form-control" type="tel" name="phoneNo" placeholder="Enter Phone number" required pattern="[0-9]{10}">
                 </div>
-                
+                <div class="col-10 col-md-8  mb-3 p-3">
+                    <label for="dob"> Date-of-Birth</label>
+                    
+                    <input class="datepicker" type ="date" value="2003-5-14" name="D.O.B" id="dob" >
+                </div>
                 <div class="col-10 col-md-8 p-3 ">
                     <label for="gender"> Gender:</label>
                     <input class="form-check-input " value="Male" type="radio" name="gender" id="male">
