--- a/root.html
+++ b/root.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Hi<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -34,7 +34,7 @@
                 <div class="col-10 col-md-8  mb-3 p-3">
                     <label for="dob"> Date-of-Birth</label>
                     
-                    <input class="datepicker" type ="date" value="2003-5-14" name="D.O.B" id="dob" >
+                    <input class="datepicker" type ="date" value="2003-05-14" name="D.O.B" id="dob" >
                 </div>
                 <div class="col-10 col-md-8 p-3 ">
                     <label for="gender"> Gender:</label>
