--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 style="text-align: center; ">Time Table</h1>
     <center>
-    <table class="table-primary table-striped table-bordered border-primary caption-top ">
+    <table class="table table-striped table-bordered border-primary caption-top ">
         <caption class="table-caption" style="text-align:center;">                
             THAMIRABHRANI ENGINEERING COLLEGE<br>
             THACHANLLUR - 627358<br>
