--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="initial-scale=1.0">
     <title>Time Table</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    
+    .find{ 
+            writing-mode: vertical-rl;
+            text-orientation: upright;
+            
+         }
+         td,th{
+            padding: 5px;
+         }
 </head>
 <body>
     <h1 style="text-align: center; ">Time Table</h1>
