--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0">
     <title>Time Table</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+<style>
     .find{ 
             writing-mode: vertical-rl;
             text-orientation: upright;
@@ -13,6 +14,7 @@
          td,th{
             padding: 5px;
          }
+</style>
 </head>
 <body>
     <h1 style="text-align: center; ">Time Table</h1>
